Adding teests for modules